[gd_scene load_steps=7 format=3 uid="uid://bpe5a2ii7ds2i"]

[ext_resource type="Script" path="res://Scenes/menus/menu.gd" id="1_hqg5c"]
[ext_resource type="Texture2D" uid="uid://b8fhfnobxmo54" path="res://Assets/vfx/menus/blue_button02.png" id="2_1g0m2"]
[ext_resource type="PackedScene" uid="uid://u8nxi8olif37" path="res://Scenes/menus/ButtonClick.tscn" id="3_3owql"]
[ext_resource type="PackedScene" uid="uid://cuvmqsin8iyjg" path="res://Scenes/menus/Version.tscn" id="3_t8nbv"]
[ext_resource type="Texture2D" uid="uid://drue3pn331lvp" path="res://Assets/vfx/menus/players_1.png" id="5_ft6vb"]
[ext_resource type="Texture2D" uid="uid://d22fojqhdatmw" path="res://Assets/vfx/menus/light_text.png" id="6_uisiy"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_hqg5c")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.499
anchor_top = 0.301
anchor_right = 0.499
anchor_bottom = 0.301
offset_left = -197.72
offset_top = -32.72
offset_right = 197.28
offset_bottom = 33.28
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 45
text = "The Apollo Project"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -89.5
offset_right = 99.0
offset_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"
icon = ExtResource("2_1g0m2")
icon_alignment = 1

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
icon = ExtResource("2_1g0m2")
icon_alignment = 1

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"
icon = ExtResource("2_1g0m2")
icon_alignment = 1

[node name="Version" parent="." instance=ExtResource("3_t8nbv")]
layout_mode = 1

[node name="ButtonClick" parent="." instance=ExtResource("3_3owql")]

[node name="Players1" type="Sprite2D" parent="."]
position = Vector2(70, 646)
texture = ExtResource("5_ft6vb")

[node name="LightText" type="Sprite2D" parent="."]
position = Vector2(204, 647)
texture = ExtResource("6_uisiy")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
